Make DittoSearchConfig extensible by providing its current config path
Signed-off-by: Florian Fendt <Florian.Fendt@bosch.io>